--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.7",
+    "prettier": "^3.6.1",
     "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3",
-    "eslint": "^9.0.0",
-    "eslint-config-expo": "~9.2.0"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
