fix: alias in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/src/*": ["./src/*"],
-      "@screens/*": ["src/app/screens/*"],
+      "@screens/*": ["./src/app/screens/*"],
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/components/*"],
       "@constants/*": ["./src/constants/*"],
