--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-navigation/native": "^7.1.6",
-    "expo": "^53.0.19",
+    "expo": "53.0.22",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.3",
+    "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -33,7 +33,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "zustand": "^5.0.6",
-    "expo-secure-store": "~14.2.3"
+    "expo-secure-store": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -47,7 +47,7 @@
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.9",
+    "jest-expo": "~53.0.10",
     "prettier": "^3.6.1",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
